<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="32dp"
    android:layout_marginTop="64dp"
    android:layout_marginRight="32dp"
    android:layout_marginBottom="64dp"
    android:background="@drawable/back_text_button">

    <ImageButton
        android:id="@+id/close"
        style="@style/WelcomeImage"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:src="@drawable/ic_close_red_36dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/chooseUser"
        style="@style/MenuInfoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="16dp"
        android:text="@string/change_user"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="44dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chooseUser" />

    <Button
        android:id="@+id/changeUser"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/change"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner" />

    <Button
        android:id="@+id/dropDB"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/drop_db"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changeUser" />

    <CheckBox
        android:id="@+id/mute"
        style="@style/MenuInfoText"
        android:layout_width="wrap_content"
        android:layout_marginTop="32dp"
        android:buttonTint="@color/white"
        android:text="@string/mute"
        app:buttonTint="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dropDB" />

</androidx.constraintlayout.widget.ConstraintLayout>